...
        }}
      />
      <Tabs.Screen
        name="workouts"
        options={{
          title: t("tab.workouts"),
          tabBarButtonTestID: "tab-workouts",
          tabBarIcon: icon("dumbbell"),
        }}
      />
      <Tabs.Screen
        name="library"
        options={{
...
